Apply translations on all pages as directive instead of pipe

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,9 +4,9 @@
   "aggregate metadata": "Aggregate metadata",
   "Event and tracker metadata": "Event & tracker metadata",
   "report metadata": "Report metadata",
-  "enter_server address": "Enter server address",
-  "enter_username": "Enter username",
-  "enter_password": "Enter password",
+  "enter server address": "Enter server address",
+  "enter username": "Enter username",
+  "enter password": "Enter password",
   "login": "Login",
   "powered by": "Powered by",
   "offline instances": "Offline instances",
