--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -4,9 +4,9 @@
   "aggregate metadata": "Métadonnées agrégées",
   "Event and tracker metadata": "Métadonnées d'événement et de suivi",
   "report metadata": "Signaler les métadonnées",
-  "enter_server_address": "Entrez l'adresse du serveur",
-  "enter_username": "Saisissez votre nom d'utilisateur",
-  "enter_password": "Entrer le mot de passe",
+  "enter server address": "Entrez l'adresse du serveur",
+  "enter username": "Saisissez votre nom d'utilisateur",
+  "enter password": "Entrer le mot de passe",
   "login": "S'identifier",
   "powered by": "Alimenté par",
   "offline instances": "Instances hors connexion",
