--- a/src/assets/i18n/id.json
+++ b/src/assets/i18n/id.json
@@ -4,9 +4,9 @@
   "aggregate metadata": "Metadata aggregate",
   "Event and tracker metadata": "Metadata Event & tracker",
   "report metadata": "Metadata Report",
-  "enter_server_address": "Isi dengan alamat server",
-  "enter_username": "Isi nama pengguna",
-  "enter_password": "Isi kata sandi",
+  "enter server address": "Isi dengan alamat server",
+  "enter username": "Isi nama pengguna",
+  "enter password": "Isi kata sandi",
   "login": "Login",
   "powered by": "Powered by",
   "offline instances": "Offline instances",
