--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -4,9 +4,9 @@
   "aggregate metadata": "Metadados agregados",
   "Event and tracker metadata": "Metadados de eventos e de tracker",
   "report metadata": "Metadados de relatorio",
-  "enter_server_ address": "Digite o endereço do servidor",
-  "enter_username": "Insira nome de usuário",
-  "enter_password": "Digite a senha",
+  "enter server address": "Digite o endereço do servidor",
+  "enter username": "Insira nome de usuário",
+  "enter password": "Digite a senha",
   "login": "Entrar",
   "powered by": "Distribuído por",
   "offline instances": "Instâncias off-line",
