--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -203,5 +203,97 @@
   "loading reports": "Loading reports",
   "downloading reports from server": "Downloading reports from the server",
   "prepare local storage for updates": "Prepare local storage for updates",
-  "saving reports from server": "Saving reports from server"
+  "saving reports from server": "Saving reports from server",
+  "you are online": "You are online",
+  "you are offline": "You are offline",
+  "fail to load user information": "Fail to load user information",
+  "fail to load system information": "Fail to load system information",
+  "fail to load app information": "Fail to load app information",
+  "fail to load data values storage status":
+    "Fail to load data values storage status",
+  "fail to load enrollments storage status":
+    "Fail to load enrollments storage status",
+  "fail to load entry form": "Fail to load entry form",
+  "there are no entry form to select": "There are no entry form to select",
+  "please select entry form first": "Please select entry form first",
+  "fail to load entry form information": "Fail to load entry form information",
+  "fail to save data from the server": "Fail to save data from the server",
+  "fail to load data from the server": "Fail to load data from the server",
+  "fail to prepare entry form": "Fail to prepare entry form",
+  "fail to load available local data": "Fail to load available local data",
+  "fail to load entry form completeness information":
+    "Fail to load entry form completeness information",
+  "there are no indicators to view": "There are no indicators to view",
+  "fail to un complete entry form": "fail to un complete entry form",
+  "fail to complete entry form": "Fail to complete entry form",
+  "fail to load assigned programs": "Fail to load assigned programs",
+  "there are no program to select": "There are no program to select",
+  "loading program stages": "Loading program stages",
+  "fail to load program stages": "Fail to load program stages",
+  "fail to prepare table for display": "Fail to prepare table for display",
+  "loading data from local storage": "Loading data from local storage",
+  "fail to set translation": "Fail to set translation",
+  "fail to prepare local storage": "Fail to prepare local storage",
+  "fail to load user authorities": "Fail to load user authorities",
+  "fail to save current user information":
+    "Fail to save current user information",
+  "please check server address": "Please check server address",
+  "you have enter wrong username or password or server address":
+    "You have enter wrong username or password or server address",
+  "please check your network connectivity":
+    "Please check your network connectivity",
+  "please enter server address, username and password":
+    "Please enter server address, username and password",
+  "fail to save organisation data": "Fail to save organisation data",
+  "fail to load organisation data": "Fail to load organisation data",
+  "fail to save entry form": "Fail to save entry form",
+  "fail to save entry form's sections": "Fail to save entry form's sections",
+  "fail to load entry form's sections": "Fail to load entry form's sections",
+  "fail to save entry form's fields": "Fail to save entry form's fields",
+  "fail to load entry form's fields": "Fail to load entry form's fields",
+  "fail to save SMS commands": "Fail to save SMS commands",
+  "fail to load SMS commands": "Fail to load SMS commands",
+  "fail to save programs": "Fail to save programs",
+  "fail to load programs": "Fail to load programs",
+  "fail to save program stage sections": "Fail to save program stage sections",
+  "fail to load program-stage-sections":
+    "Failed to load program-stage-sections",
+  "fail to save indicators": "Fail to save indicators",
+  "fail to load indicators": "Fail to load indicators",
+  "fail to save reports": "Fail to save reports",
+  "fail to load reports": "Fail to load reports",
+  "fail to save constants": "Fail to save constants",
+  "fail to load constants": "Fail to load constants",
+  "currently there is on assigned organisation unit on local storage, Please metadata on sync app":
+    "Currently there is on assigned organisation unit on local storage, Please metadata on sync app",
+  "fail to load organisation unit": "Fail to load organisation unit",
+  "fail to load profile information": "Fail to load profile information",
+  "fail to prepare local storage for updates":
+    "Fail to prepare local storage for updates",
+  "fail to download reports": "Fail to download reports",
+  "fail to load organisation units information":
+    "Fail to load organisation units information",
+  "fail to load  report details": "Fail to load  report details",
+  "fail to load settings": "Fail to load settings",
+  "fail to load available local instances":
+    "Fail to load available local instances",
+  "fail to load current user information":
+    "Fail to load current user information",
+  "settings have been updated successfully":
+    "settings have been updated successfully",
+  "fail to apply changes on  settings": "Fail to apply changes on  settings",
+  "fail to load registration form": "Fail to load registration form",
+  "loading tracked entity list": "Loading tracked entity list",
+  "fail to load tracked entity list": "Fail to load tracked entity list",
+  "a case has not yet registered": "A case has not yet registered",
+  "deleting all information related to this tracked entity instance":
+    "Deleting all information related to this tracked entity instance",
+  "tracked entity instance has been delete successfully":
+    "Tracked entity instance has been delete successfully",
+  "fail to delete all information related to this tracked entity instance":
+    "Fail to delete all information related to this tracked entity instance",
+  "loading tracked entity": "Loading tracked entity",
+  "fail to load tracked entity": "Fail to load tracked entity",
+  "loading registration fields": "Loading registration fields",
+  "fail to load registration fields": "Fail to load registration fields"
 }
