Adding translation files for hindi, arabic,vietnamese, swahili,ethiopian,spanish and norwegian

--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -1,9 +1,9 @@
 {
   "innovation in every dimension": "Inovação em todas as dimensões",
-  "establishing connection to server": "Estabelecendo conexão ao servidor",
+  "establishing connection to server": "Estabelecimento de conexão ao servidor",
   "aggregate metadata": "Metadados agregados",
-  "Event and tracker metadata": "Metadados de eventos e de tracker",
-  "report metadata": "Metadados de relatorio",
+  "Event and tracker metadata": "Metadados de eventos e rastreadores",
+  "report metadata": "Reportar metadados",
   "enter server address": "Digite o endereço do servidor",
   "enter username": "Insira nome de usuário",
   "enter password": "Digite a senha",
@@ -11,41 +11,47 @@
   "powered by": "Distribuído por",
   "offline instances": "Instâncias off-line",
   "or": "ou",
-  "apps": "Aplicativos",
+  "apps": "Apps",
   "account": "Conta",
   "about": "Sobre",
   "synced": "Sincronizado",
   "not synced": "Não sincronizado",
   "profile": "Perfil",
-  "help": "Ajuda",
+  "help": "Socorro",
   "logout": "Sair",
   "settings": "Configurações",
-  "app settings": "Configuração do aplicativo",
-  "current language": "Idioma actual",
+  "app settings": "Configuração da aplicação",
+  "current language": "Idioma atual",
   "synchronization": "Sincronização",
   "auto sync": "Sincronização automática",
   "minutes": "Minutos",
   "hours": "Horas",
   "form label": "Etiqueta de formulário",
   "display name": "Mostrar nome",
-  "form name": "Nome do formulário",
-  "form layout": "Disposição do formulário",
-  "list layout": "Disposição da lista",
-  "table layout": "Disposição da tabela",
+  "form name": "Nome do formulario",
+  "form layout": "Layout do formulário",
+  "list layout": "Layout da lista",
+  "table layout": "Layout da tabela",
   "data element per page": "Elementos de dados por página (máximo)",
-  "dashboard": "Painel de instrumentos",
-  "tracker capture": "Tracker capture",
+  "dashboard": "painel de controle",
+  "there no dashboard found": "Não há nenhum painel encontrado",
+  "search dashboard by name": "Procure o painel de controle por nome",
+  "dashboard list": "Lista de painéis",
+  "loading dashboard": "Descobrindo painéis",
+  "loading visualization": "Descobrindo dados de visualização",
+  "there no dashboard item found": "Não foram encontrados itens do painel",
+  "tracker capture": "Captura de rastreamento",
   "sync": "Sincronizar",
   "upload data via sms": "Carregar dados via sms",
   "upload data via internet": "Carregar dados via internet",
   "import summaries": "Resumos de importação",
   "aggregate data": "Dados agregados",
-  "tracked entity instances": "Instâncias de entidades rastreadas",
-  "tracked entity enrollments": "Registo de entidades rastreadas",
-  "events for tracker": "Eventos por rastrear",
+  "tracked entity instances": "Instâncias de entidade com rastreamento",
+  "tracked entity enrollments": "Registro de entidades com rastreamento",
+  "events for tracker": "Eventos para rastreador",
   "success": "Sucesso",
   "failed": "Falhou",
-  "import conflicts errors": "Conflitos/erros de importação",
+  "import conflicts errors": "Importar conflitos / erros",
   "download metadata": "Baixar metadados",
   "download data": "Baixar dados",
   "clear local data": "Limpe os dados locais",
@@ -54,172 +60,168 @@
   "events": "Eventos",
   "data entry": "Entrada de dados",
   "touch to select organisation unit":
-    "Toque para selecionar a unidade organizacional",
-  "touch to select entry form": "Toque para selecionar o formulário de dados",
+    "Toque para selecionar a Unidade de organização",
+  "touch to select entry form":
+    "Toque para selecionar o formulário de inscrição",
   "touch to select period": "Toque para selecionar o período",
   "data entry form selection": "Seleção do formulário de entrada de dados",
   "data dimension selection": "Seleção de dimensão de dados",
   "touch to select option": "Toque para selecionar a opção",
-  "period selection": "Selecção do período",
+  "period selection": "Seleção do período",
   "previous": "Anterior",
   "next": "Próximo",
-  "there is no period to select": "Não há um período por seleccionar",
-  "organisation unit selection": "Selecção da unidade organizacional",
-  "organisation unit": "Unidade organizacional",
-  "form": "Formulário",
+  "there is no period to select": "Não há um período para selecionar",
+  "organisation unit selection": "Seleção da unidade organizacional",
+  "organisation unit": "Unidade de Organização",
+  "form": "Formato",
   "period": "Período",
   "enter data": "Inserir dados",
-  "entry form": "Formulário de dados",
+  "entry form": "Formulário de inscrição",
   "available indicators": "Indicadores disponíveis",
   "complete": "Completo",
-  "undo complete": "Anular completo",
+  "undo complete": "Desfazer completar",
   "completed by": "Completado por",
   "on": "em",
   "please wait": "Por favor, espere",
-  "data entry form sections": "Secções de formulário de entrada de dados",
-  "completeness information": "Informação de integridade",
+  "data entry form sections": "Seções de formulário de entrada de dados",
+  "completeness information": "Informação detalhada",
   "full name": "Nome completo",
   "username": "Nome de usuário",
-  "e mail": "E-mail",
+  "e mail": "O email",
   "phone number": "Número de telefone",
   "event capture": "Captação de eventos",
-  "touch to select program": "Toque para seleccionar o programa",
+  "touch to select program": "Toque para selecionar o programa",
   "columns": "Colunas",
   "add": "Adicionar",
-  "event register": "Registar evento",
-  "visible header": "Cabeçalho visível",
-  "save": "Gravar",
-  "select all": "Seleccionar tudo",
+  "event register": "Registro de eventos",
+  "visible header": "Cabeçalho Visível",
+  "save": "Salve ",
+  "select all": "Selecionar tudo",
   "deselect all": "Desmarcar todos",
   "program": "Programa",
   "program selection": "Seleção do programa",
-  "tracked entity dashboard": "Painel de instrumentos da entidade rastreada",
-  "Registration": "Registo",
-  "enrolling organisation unit": "Unidade de organização de registo",
-  "enrolling program": "Programa de registo",
+  "tracked entity dashboard": "Painel de instrumentos de rastreamento",
+  "Registration": "Cadastro",
+  "enrolling organisation unit": "Unidade de organização de inscrição",
+  "enrolling program": "Programa de inscrição",
   "list of widgets": "Lista de widgets",
-  "reports": "Relatórios",
-  "data set report": "Relatório de ficha",
+  "report": "Relatórios",
+  "data set report": "Relatório de conjunto de dados",
   "standard report": "Relatório padrão",
   "report name": "Nome do relatório",
   "report view": "Visualização do relatório",
   "generate report": "Gerar relatório",
   "help search": "Ajuda na busca",
-  "search help by title": "Procura de ajuda por título",
-  "dashboard list": "Lista de painéis",
+  "search help by title": "Procure ajuda por título",
   "system info": "Informação do sistema",
-  "assigned organisation units": "Unidades organizacionais associadas",
+  "assigned organisation units": "Unidades de organização designadas",
   "user information": "Informação do usuário",
   "assigned roles": "Funções atribuídas",
-  "assigned program": "Programa associadas",
-  "assigned form": "Formulário associadas",
-  "aggregate status": "Estado de agregação",
-  "event status": "Estado do evento",
-  "event for tracker status": "Evento para estado de tracker",
+  "assigned program": "Programa atribuído",
+  "assigned form": "Formulário atribuído",
+  "aggregate status": "Status agregado",
+  "event status": "Status do evento",
+  "event for tracker status": "Evento para status de rastreador",
   "enrollments": "Inscrições",
-  "preparing table": "Preparando tabela",
+  "preparing table": "Tabela de preparação",
   "loading current user information":
-    "Carregando informações actualizadas do usuário",
+    "Carregando informações atualizadas do usuário",
   "loading settings": "Configurações de carregamento",
   "loading help contents": "Carregando conteúdo da ajuda",
   "loading": "Carregando ...",
   "loading profile information": "Carregando informações do perfil",
   "loading user information": "Carregando informações do usuário",
   "loading entry form information":
-    "Carregando informações do formulário de entrada de dados",
+    "Carregando informações do formulário de entrada",
   "loading available local instances":
     "Carregando instâncias locais disponíveis",
-  "loading indicators": "Carregando indicadores",
-  "prepare entry form": "Preparar formulário de entrada de dados",
+  "loading indicators": "Indicadores de carregamento",
+  "prepare entry form": "Preparar formulário de inscrição",
   "loading data from the server": "Carregando dados do servidor",
   "saving data from server": "Salvando dados do servidor",
   "loading current user authorities":
-    "Carregando as autoridades actuais dos usuários",
+    "Carregando as autoridades atuais dos usuários",
   "preparing local storage": "Preparando armazenamento local",
   "loading assigned organisation units":
-    "Carregando unidades de organização associadas",
+    "Carregando unidades de organização atribuídas",
   "assigned organisation units have been loaded":
-    "Unidades organizacionais associadas foram carregadas",
+    "As unidades de organização atribuídas foram carregadas",
   "assigned organisation units have been saved":
-    "Unidades organizacionais associadas foram gravadas",
+    "As unidades de organização atribuídas foram salvas",
   "saving assigned organisation units":
-    "Gravando unidades de organização associadas",
-  "loading entry forms": "Carregando formulários de entrada de dados",
+    "Salvando unidades de organização designadas",
+  "loading entry forms": "Carregando formulários de inscrição",
   "entry forms have been loaded":
-    "Formulários de entrada de dados foram carregados",
-  "saving entry forms": "Gravando formulários de entrada",
-  "entry form have been saved": "Formulário de entrada de dados foi gravado",
-  "loading entry form sections":
-    "Carregando secções do formulário de entrada de dados",
+    "Os formulários de inscrição foram carregados",
+  "saving entry forms": "Salvando formulários de entrada",
+  "entry form have been saved": "O formulário de inscrição foi salvo",
+  "loading entry form sections": "Carregando seções do formulário de entrada",
   "entry form sections have been loaded":
-    "Secções de formulário de entrada de dados foram carregadas",
-  "saving entry form sections":
-    "Gravando secções de formulário de entrada de dados",
+    "Seções de formulário de entrada foram carregadas",
+  "saving entry form sections": "Salvando seções de formulário de entrada",
   "entry form sections have been saved":
-    "Secções de formulário de entrada de dados foram gravadas",
-  "loading entry form fields":
-    "Carregando os campos do formulário de entrada de dados",
+    "Seções de formulário de entrada foram salvas",
+  "loading entry form fields": "Carregando os campos do formulário de entrada",
   "entry form fields have been loaded":
-    "Campos de formulário de entrada de dados foram carregados",
-  "saving entry form fields":
-    "Gravando campos do formulário de entrada de dados",
+    "Campos de formulário de entrada foram carregados",
+  "saving entry form fields": "Salvando campos do formulário de entrada",
   "entry form fields have been saved":
-    "Campos do formulário de entrada de dados foram gravados",
+    "Os campos do formulário de entrada foram salvos",
   "loading programs": "Carregando programas",
   "loading sms commands": "Carregando comandos SMS",
-  "sms commands have been loaded": "Comandos SMS foram carregados",
-  "saving sms commands": "Gravando comandos SMS",
-  "sms commands have been saved": "Comandos SMS foram gravados",
-  "programs have been loaded": "Programas foram carregados",
-  "saving programs": "Gravando programas",
-  "programs have been saved": "Programas foram gravados",
+  "sms commands have been loaded": "Os comandos do SMS foram carregados",
+  "saving sms commands": "Salvando comandos de SMS",
+  "sms commands have been saved": "Os comandos SMS foram salvos",
+  "programs have been loaded": "Os programas foram carregados",
+  "saving programs": "Salvando programas",
+  "programs have been saved": "Os programas foram salvos",
   "loading program stage section":
-    "Carregando as secções do estágio do programa",
+    "Carregando as seções do estágio do programa",
   "program stage section have been loaded":
-    "Secções de estágio do programa foram carregadas",
-  "saving program stage section": "Gravando secções do estágio do programa",
+    "Seções de estágio do programa foram carregadas",
+  "saving program stage section": "Salvando seções do estágio do programa",
   "program stage section have been saved":
-    "Secções de estágio de programa foram gravadas",
+    "Seções de estágio de programa foram salvas",
   "indicators have been loaded": "Indicadores foram carregados",
-  "saving sms indicators": "Gravando indicadores",
-  "indicators have been saved": "Indicadores foram gravados",
-  "reports have been loaded": "Relatórios foram carregados",
-  "saving reports": "Gravando relatórios",
-  "reports have been saved": "Relatórios foram gravados",
+  "saving sms indicators": "Indicadores de poupança",
+  "indicators have been saved": "Os indicadores foram salvos",
+  "reports have been loaded": "Os relatórios foram carregados",
+  "saving reports": "Salvando relatórios",
+  "reports have been saved": "Os relatórios foram salvos",
   "loading constants": "Carregando constantes",
   "constants have been loaded": "Constantes foram carregadas",
-  "saving constants": "Gravando constantes",
-  "constants have been saved": "Constantes foram gravadas",
+  "saving constants": "Salvando constantes",
+  "constants have been saved": "Constantes foram salvas",
   "loading report metadata": "Carregando metadados do relatório",
   "loading available local data": "Carregando dados locais disponíveis",
   "loading entry form completeness information":
-    "Carregando informações de integridade do formulário de entrada",
+    "Carregando informações de preenchimento do formulário de preenchimento",
   "loading app information": "Carregando informações do aplicativo",
   "loading system information": "Carregando informações do sistema",
   "loading data values storage status":
-    "Carregando estado de armazenamento de dados",
+    "Carregando os valores dos dados de status de armazenamento",
   "loading events storage status":
-    "Carregando estado de armazenamento de eventos",
+    "Carregando status de armazenamento de eventos",
   "loading enrollments storage status":
-    "Carregando estado de armazenamento de inscrições",
+    "Carregando status de armazenamento de inscrições",
   "loading assigned programs": "Carregando programas atribuídos",
   "loading data set report information":
-    "Carregando informações do relatório de ficha",
-  "prepare data set report": "Preparando o relatório de ficha",
+    "Carregando informações do relatório do conjunto de dados",
+  "prepare data set report": "Preparando o relatório do conjunto de dados",
   "no data to display": "Nenhum dado a ser exibido",
-  "there is no option to select": "Não há opção seleccionar",
+  "there is no option to select": "Não há opção para selecionar",
   "there is no data entry form to select":
-    "Não há formulário de entrada de dados a seleccionar",
-  "there is nothing to select": "Não há nada para seleccionar",
+    "Não há formulário de entrada de dados para selecionar",
+  "there is nothing to select": "Não há nada para selecionar",
   "there no data at the moment": "Não há dados no momento",
-  "there is no program to select": "Não há programa para seleccionar",
-  "there is no report to select": "Não há relatório para seleccionar",
-  "there is no widget to select": "Não há nenhum widget para seleccionar",
+  "there is no program to select": "Não há nenhum programa para selecionar",
+  "there is no report to select": "Não há relatório para selecionar",
+  "there is no widget to select": "Não há nenhum widget para selecionar",
   "loading reports": "Carregando relatórios",
   "downloading reports from server": "Transferir relatórios do servidor",
   "prepare local storage for updates":
-    "Preparar armazenamento local para actualizações",
-  "saving reports from server": "Gravando relatórios do servidor",
+    "Prepare armazenamento local para atualizações",
+  "saving reports from server": "Salvando relatórios do servidor",
   "you are online": "Você está online",
   "you are offline": "Você está offline",
   "fail to load user information": "Falha ao carregar informações do usuário",
@@ -238,13 +240,14 @@
     "Falha ao carregar a informação do formulário de entrada",
   "fail to save data from the server": "Falha ao salvar dados do servidor",
   "fail to load data from the server": "Falha ao carregar dados do servidor",
-  "fail to prepare entry form": "Fail to prepare entry form",
+  "fail to prepare entry form":
+    "Falha na preparação do formulário de inscrição",
   "fail to load available local data":
     "Falha na carga de dados locais disponíveis",
   "fail to load entry form completeness information":
     "Falha ao carregar as informações de preenchimento do formulário de preenchimento",
   "there are no indicators to view": "Não há indicadores para ver",
-  "fail to un complete entry form": "Falha no formulário de inscrição completo",
+  "fail to un complete entry form": "não preencher formulário de inscrição",
   "fail to complete entry form":
     "Falha na conclusão do formulário de inscrição",
   "fail to load assigned programs": "Falha ao carregar os programas atribuídos",
@@ -253,7 +256,7 @@
   "fail to load program stages": "Falha ao carregar os estágios do programa",
   "fail to prepare table for display":
     "Falha na preparação da tabela para exibição",
-  "loading data from local storage": "Loading data from local storage",
+  "loading data from local storage": "Carregando dados do armazenamento local",
   "fail to set translation": "Falha na criação de tradução",
   "fail to prepare local storage": "Falha na preparação do armazenamento local",
   "fail to load user authorities":
@@ -291,7 +294,7 @@
   "fail to save reports": "Falha na gravação de relatórios",
   "fail to load reports": "Falha na carga de relatórios",
   "fail to save constants": "Falha ao salvar constantes",
-  "fail to load constants": "Fail to load constants",
+  "fail to load constants": "Falha na carga de constantes",
   "currently there is on assigned organisation unit on local storage, Please metadata on sync app":
     "Atualmente, está na unidade de organização atribuída no armazenamento local, por favor, metadados no aplicativo de sincronização",
   "fail to load organisation unit": "Falha na carga da unidade organizacional",
