--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -29,18 +29,19 @@
   "form label": "Étiquette de formulaire",
   "display name": "Afficher un nom",
   "form name": "Nom de forme",
-  "form layout": "disposition de formulaire",
+  "form layout": "Forme de formulaire",
   "list layout": "Présentation de la liste",
   "table layout": "Disposition de la table",
-  "data element per page": "Eléments de données par page(max)",
+  "data element per page": "Eléments de données par page (max)",
   "dashboard": "Tableau de bord",
+  "there no dashboard found": "Il n'y a pas de tableau de bord trouvé",
+  "search dashboard by name": "Rechercher le tableau de bord par nom",
   "dashboard list": "Liste de tableau de bord",
-  "there no dashboard found": "There are no dashboard found",
-  "search dashboard by name": "Search dashboard by name",
-  "loading visualization": "Discovering visualization data",
-  "loading dashboard": "Discovering dashboards",
-  "there no dashboard item found": "There are no dashboard items found",
-  "tracker capture": "capture de suivi",
+  "loading dashboard": "Découvrir des tableaux de bord",
+  "loading visualization": "Découvrir les données de visualisation",
+  "there no dashboard item found":
+    "Aucun élément du tableau de bord n'a été trouvé",
+  "tracker capture": "Tracker Capture",
   "sync": "Synchronisation",
   "upload data via sms": "Télécharger des données via SMS",
   "upload data via internet": "Télécharger des données via Internet",
@@ -87,7 +88,7 @@
   "completeness information": "Informations d'exhaustivité",
   "full name": "Nom complet",
   "username": "Nom d'utilisateur",
-  "e mail": "E-mail",
+  "e mail": "Email",
   "phone number": "Numéro de téléphone",
   "event capture": "Capture d'événement",
   "touch to select program": "Touchez pour sélectionner le programme",
@@ -105,7 +106,7 @@
   "enrolling organisation unit": "Inscription de l'unité d'organisation",
   "enrolling program": "Programme d'inscription",
   "list of widgets": "Liste des widgets",
-  "reports": "Rapports",
+  "report": "Rapports",
   "data set report": "Rapport de jeu de données",
   "standard report": "Rapport standard",
   "report name": "Nom du rapport",
@@ -137,7 +138,7 @@
     "Chargement des instances locales disponibles",
   "loading indicators": "Indicateurs de chargement",
   "prepare entry form": "Préparer le formulaire",
-  "loading data from the server": "Chargement des données du serveur ",
+  "loading data from the server": "Chargement des données du serveur",
   "saving data from server": "Sauvegarde des données du serveur",
   "loading current user authorities":
     "Chargement des autorités d'utilisateur actuelles",
@@ -185,8 +186,8 @@
   "saving program stage section":
     "Enregistrement des sections de l'étape du programme",
   "program stage section have been saved":
-    "les sections de l'étape du programme ont été sauvegardées ",
-  "indicators have been loaded": "les indicateurs ont été chargés",
+    "Les sections de l'étape du programme ont été sauvegardées",
+  "indicators have been loaded": "Les indicateurs ont été chargés",
   "saving sms indicators": "Indicateurs d'économie",
   "indicators have been saved": "Les indicateurs ont été sauvegardés",
   "reports have been loaded": "Les rapports ont été chargés",
@@ -259,7 +260,7 @@
     "Impossible de charger les informations d'exhaustivité du formulaire d'entrée",
   "there are no indicators to view": "Il n'y a pas d'indicateurs à voir",
   "fail to un complete entry form":
-    "Échec du formulaire d'inscription incomplet",
+    "ne pas remplir le formulaire d'inscription complet",
   "fail to complete entry form":
     "Impossible de remplir le formulaire d'inscription",
   "fail to load assigned programs":
@@ -331,7 +332,7 @@
   "fail to load current user information":
     "Impossible de charger les informations utilisateur en cours",
   "settings have been updated successfully":
-    "Les paramètres ont été mis à jour avec succès",
+    "les paramètres ont été mis à jour avec succès",
   "fail to apply changes on  settings":
     "Impossible d'appliquer les modifications sur les paramètres",
   "fail to load registration form":
